Literaturnachweise fuer Microservices and Zusammenhand and Verknuepfung wurde hinzugefuegt

--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -27,6 +27,7 @@ Diese werden jedoch nur in Teilen der Anwendung verwendet, werden allerdings zum
 Um in Zukunft eine schnelle Weiterentwicklung der Applikation sicherzustellen, hat PluraPolit beschlossen, den aktuellen Aufbau in eine Microservice-Architektur zu ändern und die gesamte Plattform in inhaltlich getrennte Module zu teilen.
 
 \subsection{Zielsetzung}
+\label{sec:zielsetzung}
 
 Schon im Jahr 2005 hat Peter Rodgers auf der Web Services Edge Conference über Micro-Web Services referiert. Er kombinierte die Konzepte der Service-Orientierten-Architektur (SOA) mit den der Unix-Philosophie und sprach von verbundenen REST-Services. Er versprach sich dadurch eine Verbesserung der Flexibilität der Service-Orientierten-Architektur \parencite[vlg.][]{rodgers_peter}. Erstmalig 2011 wurde dieser Ansatz als Microservice-Architektur bezeichnet \parencite[vlg.][]{dragoni_microservices_2017}. Ab 2013 entwickelte sich rund um das Thema eine immer größer werdendes Interesse, welches dazu führte, dass mehr Blogposts, Bücher, sowie wissenschaftliche Arbeiten geschrieben wurden. Somit sind die Definition und die Charakteristiken bis ins Detail beleuchtet. Des Weiteren gibt es einige Beispiele von bekannten Unternehmen, wie Netflix und Amazon, die die Herausforderungen der Überführung ihres Systems zu einer Microservice-Architektur beschreiben.
 
